--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/component.css" />
+    <link rel="stylesheet" href="build/css/style.css">
+    <link rel="stylesheet" type="text/css" href="build/css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="build/css/component.css" />
     <!-- Useful meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -14,7 +14,7 @@
     <meta name="google" content="notranslate">
     <meta name="format-detection" content="telephone=no">
 
-    <script src="/js/main.js"></script>
+    <script src="build/js/main.js"></script>
     <title>Home</title>
 </head>
 <body>
