--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ I like to solve design problems, create a smart user interface and imagine a use
     </div>   
 </div>
  
-    <script src="/js/classie.js"></script>
-    <script src="/js/svganimations.js"></script>
+    <script src="build/js/classie.js"></script>
+    <script src="build/js/svganimations.js"></script>
 </body>
 </html>
