--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="format-detection" content="telephone=no">
 
     <script src="build/js/main.js"></script>
-    <title>Home</title>
+    <title>NAlt-portfolio</title>
 </head>
 <body>
     <div class="wrapper">
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="intro">
                 <div class="intro-title">
-                    <div class="intro-title__small">Hello! I’m Anastaiia Smychkovskaya.</div>
+                    <div class="intro-title__small">Hello! I’m Anastasiya Smychkovskaya.</div>
                     <h1 class="intro-title__big">Web Developer &
                         UI/UX Designer
                     </h1>
