--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ I like to solve design problems, create a smart user interface and imagine a use
             </div>
             <div class="footer-contact__item">
                 <h4 class="footer-title">Thank you for watching</h4>
+                <h5>©2020 Anastasiya Smychkovskaya.  All rights reserved. </h5>
             </div>
             </div>    
         </div>
