--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="build/css/style.css">
     <link rel="stylesheet" type="text/css" href="build/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="build/css/component.css" />
+    <link rel="icon" type="image/png" sizes="16x16" href="build/img/favicon-16x16.png">
     <!-- Useful meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
