--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" href="build/css/style.css">
     <link rel="stylesheet" type="text/css" href="build/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="build/css/component.css" />
-<link rel="icon" type="image/png" sizes="32x32" href="build/img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="build/img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="build/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="build/img/favicon-16x16.png">
+
     <!-- Useful meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -15,6 +16,8 @@
     <meta name="googlebot" content="index, follow">
     <meta name="google" content="notranslate">
     <meta name="format-detection" content="telephone=no">
+    <meta property="og:title" content="NAlt-portfolio"/>
+    <meta property="og:image" content="build/img/meta_img.jpg" />
 
     <script src="build/js/main.js"></script>
     <title>NAlt-portfolio</title>
