--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <h2 class="about-title">About me</h2>
                     <div class="about-text">
                        I am a web developer and UI / UX designer from Kiev, Ukraine.
-I like to solve design problems, create a smart user interface and imagine a useful interaction while developing a rich web interface and web applications.
+I like to solve design problems, create a smart user interface.
                     </div>
 <!--                     <div>
                         <a class="about-link">View resume</a>
