Porfolio intro-img

--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
                         </svg>
                     </div>
                 </figure>
+                <div class="drawn-tech">
+                    <img src="/build/img/js.svg">
+                </div>
+                <div class="drawn-tech">
+                    <img src="/build/img/html.svg">    
+                </div>
+                <div class="drawn-tech">
+                    <img src="/build/img/css.svg">
+                </div>
             </div>
                 <div class="scroll ">
                     
