--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ I like to solve design problems, create a smart user interface.
                 </div>
 
                 <div class="modal-project__link">
-                    <a class="modal-link" target="_blank" href="http://geoprostir.gki.com.ua/"><span class="modal-link__text">Web-site</span><span class="modal-link__figure"></span></a>
+                    <a class="modal-link" target="_blank" href="http://geoprostir.gki.com.ua/"><span class="modal-link__text">Go to web-site</span><span class="modal-link__figure"></span></a>
                 </div>
             </div>   
         </div>
@@ -332,7 +332,7 @@ I like to solve design problems, create a smart user interface.
                 </div>
 
                 <div class="modal-project__link">
-                    <a class="modal-link" target="_blank" href=""><span class="modal-link__text">Web-site</span><span class="modal-link__figure"></span></a>
+                    <a class="modal-link" target="_blank" href=""><span class="modal-link__text">Go to web-site</span><span class="modal-link__figure"></span></a>
                 </div>
             </div>   
         </div>
@@ -368,7 +368,7 @@ I like to solve design problems, create a smart user interface.
                 </div>
 
                 <div class="modal-project__link">
-                    <a class="modal-link" target="_blank" href="http://slavutska.otg.ua/"><span class="modal-link__text">Web-site</span><span class="modal-link__figure"></span></a>
+                    <a class="modal-link" target="_blank" href="http://slavutska.otg.ua/"><span class="modal-link__text">Go to web-site</span><span class="modal-link__figure"></span></a>
                 </div>
             </div>   
         </div>
@@ -405,7 +405,7 @@ I like to solve design problems, create a smart user interface.
                 </div>
 
                 <div class="modal-project__link">
-                    <a class="modal-link" target="_blank" href=""><span class="modal-link__text">Web-site</span><span class="modal-link__figure"></span></a>
+                    <a class="modal-link" target="_blank" href=""><span class="modal-link__text">Go to web-site</span><span class="modal-link__figure"></span></a>
                 </div>
             </div>   
         </div>
@@ -442,7 +442,7 @@ I like to solve design problems, create a smart user interface.
                 </div>
 
                 <div class="modal-project__link">
-                    <a class="modal-link" target="_blank" href=""><span class="modal-link__text">Web-site</span><span class="modal-link__figure"></span></a>
+                    <a class="modal-link" target="_blank" href=""><span class="modal-link__text">Go to web-site</span><span class="modal-link__figure"></span></a>
                 </div>
             </div>   
         </div>
