--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </li>
                 </ul>
             </nav>
-            
+
         </div>
     </header>
     <main>
@@ -96,13 +96,13 @@
                 </div>
             </div>
                 <div class="scroll ">
-                    
-                    <a class="scroll_elem" href="#about">
+                    <a class="scroll_link  scroll_elem" href="#about"></a>
+                    <div class="scroll_item">
                         scroll
                         <span></span>
                         <span></span>
                         <span></span>
-                    </a>
+                    </div>
                 </div>
             </div>
             <div class="about p-relative">
