--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ I like to solve design problems, create a smart user interface.
                 <div class="about-skiils__col">
                    <h4 class="subtitle">Details</h4>  
                    <div>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    A series of scientific and practical measures for the development of national geospatial data infrastructure.
                    </div>
                 </div>
 
@@ -328,7 +328,7 @@ I like to solve design problems, create a smart user interface.
                 <div class="about-skiils__col">
                    <h4 class="subtitle">Details</h4>  
                    <div>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    Geoportal of the town-planning cadastre of Chernihiv region
                    </div>
                 </div>
 
@@ -365,7 +365,7 @@ I like to solve design problems, create a smart user interface.
                 <div class="about-skiils__col">
                    <h4 class="subtitle">Details</h4>  
                    <div>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    Geo-portal of urban planning cadastre of Slavutsk city united territorial community
                    </div>
                 </div>
 
@@ -402,7 +402,7 @@ I like to solve design problems, create a smart user interface.
                 <div class="about-skiils__col">
                    <h4 class="subtitle">Details</h4>  
                    <div>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                   Geoportal of Mariupol City Council
                    </div>
                 </div>
 
@@ -439,7 +439,7 @@ I like to solve design problems, create a smart user interface.
                 <div class="about-skiils__col">
                    <h4 class="subtitle">Details</h4>  
                    <div>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    The site of the Traffic Management Center in Kyiv
                    </div>
                 </div>
 
