--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ I like to solve design problems, create a smart user interface.
        
             <div class="modal-body container">
             <div class="modal-project-img">
-                <div class="modal-img__back" style="background-image: url(img/max/metrograd.png);">
+                <div class="modal-img__back" style="background-image: url(build/img/max/metrograd.png);">
                 </div>
             </div>
             <div class="modal-project-detail">
