--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="google" content="notranslate">
     <meta name="format-detection" content="telephone=no">
 
-    <script src="js/main.js"></script>
+    <script src="build/js/main.js"></script>
     <title>NAlt-portfolio</title>
 </head>
 <body>
@@ -507,7 +507,7 @@ I like to solve design problems, create a smart user interface and imagine a use
     </div>   
 </div>
  
-    <script src="js/classie.js"></script>
-    <script src="js/svganimations.js"></script>
+    <script src="build/js/classie.js"></script>
+    <script src="build/js/svganimations.js"></script>
 </body>
 </html>
