--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="google" content="notranslate">
     <meta name="format-detection" content="telephone=no">
 
-    <script src="js/main.js"></script>
+    <script src="build/js/main.js"></script>
     <title>NAlt-portfolio</title>
   </head>
   <body>
